* remove uneeded CSS - fixes: linktree not showing a seperator. Signed-off-by:Thorsten Eurich <thorsten@eurich.de>

--- a/themes/default/css/_besocial/index_besocial.css
+++ b/themes/default/css/_besocial/index_besocial.css
@@ -1027,15 +1027,6 @@ a.active {
 		border-radius: 3px;
 		margin-top: 8px;
 	}
-	.navigate_section, .linktree, .linktree:before, .linktree:after, .linktree_last,
-	.linktree_last:before, .linktree_last:after {
-		border: none !important;
-		background: none !important;
-	}
-	.linktree:hover, .linktree>a:hover, .linktree_last, .linktree_last>a,
-	.linktree_last>a:hover, .linktree_last strong {
-		color: #666 !important;
-	}
 	.forum_category, .forumposts, .content_category {
 		background: #fff;
 		border: none;
